--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,16 +1,10 @@
 {
     "configurations": [
-        {
-            "type": "lldb",
-            "request": "attach",
-            "name": "Attach",
-            "pid": "${command:pickMyProcess}" // use ${command:pickProcess} to pick other users' processes
-        },
     {
         "type": "lldb",
         "request": "launch",
         "name": "Debug",
-        "program": "${workspaceFolder}/<your program>",
+        "program": "${workspaceFolder}/target/debug/bgg",
         "args": [],
         "cwd": "${workspaceFolder}"
     }
